--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FUNNYCOM</title>
+  <title>Heeju Yang</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
   <div id="container">
     <header>
       <!-- 이름을 가장 위쪽에 -->
-      <h1>funnycom</h1>
-      <h2>Frontend Developer</h2>
+      <h1>Heeju Yang</h1>
+      <h2>Fullstack Developer</h2>
     </header>
     <!-- 내용 -->
     <main>
@@ -26,58 +28,65 @@
         <!-- 자기 소개 -->
         <section>
           <!-- 소개 내용은 <p>와 </p> 사이의 부분을 수정하세요 -->
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident repellendus debitis ipsam tempore quia ad. Ducimus sint vel porro eos debitis veniam quis, repellat odio neque, cum voluptate, natus doloremque!</p>
+          <p>Just have some fun with playing codes in a village on Guam island</p>
 
           <!-- sns 링크 부분 -->
           <!-- href="" 부분의 링크와 내용을 수정하세요 -->
           <ul id="sns">
             <li>
               <i class="fa fa-envelope" aria-hidden="true"></i>
-              <a href="mailto:your-email@example.com">your-email@example.com</a>              
-        </li>
+              <a href="mailto:infantry_hooa@hotmail.com">infantry_hooa@hotmail.com</a>
+            </li>
             <li>
               <i class="fab fa-github" aria-hidden="true"></i>
-              <a href="https://github.com/gh-username">gh-username</a>              
+              <a href="https://github.com/zakard114">zakard114</a>
             </li>
             <li>
               <i class="fab fa-linkedin" aria-hidden="true"></i>
               <a href="https://linkedin.com/linkedin-username">linkedin-username</a>
             </li>
-            </ul>
+          </ul>
         </section>
       </article>
 
       <artile id="right">
         <section>
-          <h2>경력(work)</h2>
+          <h2>Work</h2>
           <!-- 경력 내용 수정 -->
-            <dl>
-              <dt>회사 A : 2018 ~ 2020</dt>
-              <dd>회사에서 맡았던 업무</dd>
-              <dd>기타 사항</dd>
-            </dl>
-            <dl>
-              <dt>회사 B : 2020 ~ 2022</dt>
-              <dd>회사에서 맡았던 업무</dd>              
-            </dl>  
+          <dl>
+            <dt>Self Employee: around 2008 ~ 2010</dt>
+            <dd>POS system operator</dd>
+            <dd>Unofficial Temporary Task</dd>
+          </dl>
+          <dl>
+            <dt>Skynet: 2003 ~ 2008</dt>
+            <dd>Technician and System operator</dd>
+          </dl>
         </section>
         <section>
-          <h2>다룰 수 있는 기술(skills)</h2>
+          <h2>Skills</h2>
           <!-- 자신있는 기술 수정 -->
+          <p>Java</p>
+          <p>SpringBoot</p>
           <p>HTML/CSS</p>
-          <p>Javascritpt</p>
+          <p>JavaScript</p>
+          <p>TypeScript</p>
+          <p>Node.js</p>
           <p>React</p>
+          <p>Python</p>
           <p>Github</p>
         </section>
         <section>
-          <h2>학력(education)</h2>
+          <h2>Education</h2>
           <!-- 학력 수정 -->
-          <p>2018.02 - XX 대학교 졸업(전공: 컴퓨터공학)</p>
-          <p>2012.02 - XX 고등학교 졸업</p>
+          <p>2023.02 - University of the People(Bsc. of Computer Science)</p>
+          <p>2004.03 - University of Guam(Undergrad. of Mathmatics & Military Science(U.S.Army ROTC))</p>
+          <p>2003.11 - Simon A. Sanchez Highschool(Guam, U.S.)</p>
           <p> ... </p>
         </section>
       </artile>
     </main>
   </div>
 </body>
+
 </html>
